# xbox360-ports

./: .gitignore  .gitmodules  README.md  STATUS.md  games.conf  play.sh  retest.sh
docs/: _config.yml  index.md
games/bionic1/config/: bc1_manifest.toml  bc1_rexglue.toml
games/bionic1/project/: CMakeLists.txt
games/bionic1/project/src/: main.cpp  stubs.cpp
games/bionic2/config/: bc2_manifest.toml
games/bionic2/project/: CMakeLists.txt
games/bionic2/project/src/: main.cpp  stubs.cpp
games/bubblebobble/config/: bb_manifest.toml  bb_rexglue.toml
games/bubblebobble/project/: CMakeLists.txt
games/bubblebobble/project/src/: main.cpp  stubs.cpp
games/choplifter/config/: cl_manifest.toml  cl_rexglue.toml
games/choplifter/project/: CMakeLists.txt
games/choplifter/project/src/: main.cpp  stubs.cpp
games/daytona/config/: daytona_manifest.toml  daytona_rexglue.toml
games/daytona/project/: CMakeLists.txt
games/daytona/project/src/: main.cpp
games/geometrywars/: NOTES.md
games/geometrywars/config/: gw_manifest.toml  gw_rexglue.toml
games/geometrywars/project/: CMakeLists.txt
games/geometrywars/project/src/: main.cpp  stubs.cpp
games/hydrothunder/config/: ht_manifest.toml  ht_rexglue.toml
games/hydrothunder/project/: CMakeLists.txt
games/hydrothunder/project/src/: main.cpp  stubs.cpp
games/jetpac/config/: jp_manifest.toml  jp_rexglue.toml
games/jetpac/project/: CMakeLists.txt
games/jetpac/project/src/: main.cpp  stubs.cpp
games/outrun/config/: or_manifest.toml  or_rexglue.toml
games/outrun/project/: CMakeLists.txt
games/outrun/project/src/: main.cpp  stubs.cpp
games/pgr3/config/: pgr_manifest.toml  pgr_rexglue.toml
games/pgr3/project/: CMakeLists.txt
games/pgr3/project/src/: main.cpp  stubs.cpp
games/raidenfighters/config/: rfa_jj6_rexglue.toml  rfa_jj7_rexglue.toml  rfa_jj8_rexglue.toml  rfa_manifest.toml  rfa_rexglue.toml
games/raidenfighters/project/: CMakeLists.txt
games/raidenfighters/project/src/: keyboard_driver.h  main.cpp  stubs.cpp
games/rainbowislands/config/: ri_manifest.toml  ri_rexglue.toml
games/rainbowislands/project/: CMakeLists.txt
games/rainbowislands/project/src/: main.cpp  stubs.cpp
games/ridgeracer/config/: rr_manifest.toml  rr_rexglue.toml
games/ridgeracer/project/: CMakeLists.txt
games/ridgeracer/project/src/: keyboard_driver.cpp  main.cpp  stubs.cpp
games/ridgeracer6/config/: rr6_manifest.toml  rr6_rexglue.toml
games/ridgeracer6/project/: CMakeLists.txt
games/ridgeracer6/project/src/: main.cpp  stubs.cpp
games/ridgeracer6/seedsave/B13EBABEBABEBABE/4E4D07D3/00000001/Game Data/: UY^V#]    $lllllllllllllli
games/ridgeracer6/seedsave/B13EBABEBABEBABE/4E4D07D3/Headers/00000001/: Game Data.header
games/soulcalibur/config/: sc_manifest.toml  sc_rexglue.toml
games/soulcalibur/project/: CMakeLists.txt
games/soulcalibur/project/src/: main.cpp  stubs.cpp
games/soulcalibur2/config/: sc2_manifest.toml  sc2_rexglue.toml
games/soulcalibur2/project/: CMakeLists.txt
games/soulcalibur2/project/src/: main.cpp  stubs.cpp
games/soulcalibur4/config/: sc4_manifest.toml  sc4_rexglue.toml
games/soulcalibur4/project/: CMakeLists.txt
games/soulcalibur4/project/src/: main.cpp  stubs.cpp
games/spacegiraffe/: NOTES.md
games/spacegiraffe/config/: sg_manifest.toml  sg_rexglue.toml
games/spacegiraffe/patches/: sg_invalid_function_backtrace.patch  sg_xmp_capture_output_success.patch
games/spacegiraffe/project/: CMakeLists.txt
games/spacegiraffe/project/src/: main.cpp  stubs.cpp
games/splitsecond/config/: ss_manifest.toml  ss_skipper_rexglue.toml  ss_splitsecond1_rexglue.toml
games/splitsecond/project/: CMakeLists.txt
games/splitsecond/project/src/: main.cpp  stubs.cpp
games/trialshd/config/: th_manifest.toml  th_rexglue.toml
games/trialshd/project/: CMakeLists.txt
games/trialshd/project/src/: main.cpp  stubs.cpp
tools/: bringup.sh  framepacing.py  make_gamepack.sh  make_standalone.sh  newgame.sh
tools/renderdoc/: rd_analyze.py  rd_chain.py  rd_dispatch.py  rd_draws.py  rd_msaa.py  rd_pixel2.py  rd_save1.py
